dernières retouches d'affichage

--- a/css/style.css
+++ b/css/style.css
@@ -10775,9 +10775,13 @@ ul {
   margin: auto;
 }
 
-#h1 {
+#h1, #h1resume {
   width: 100%;
   text-align: center;
+}
+
+#h1resume {
+  margin-top: 150px;
 }
 
 #detailOurs {
@@ -10797,6 +10801,10 @@ tr {
 
 button {
   margin-top: 15px;
+}
+
+#resume {
+  margin: 100px 0 300px 0;
 }
 
 .footer {
